// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PricingCard component should match snapshot 1`] = `
<View
  testID="wrapper"
>
  <View
    replaceTheme={[Function]}
    style={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#e1e8ee",
        "borderWidth": 1,
        "margin": 15,
        "marginBottom": 15,
        "padding": 15,
        "shadowColor": "rgba(0,0,0, .2)",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.5,
        "shadowRadius": 0.5,
      }
    }
    updateTheme={[Function]}
  >
    <View
      style={
        Object {
          "backgroundColor": "transparent",
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          Object {
            "color": "#2089dc",
            "fontSize": 38.57142857142857,
            "fontWeight": "800",
            "textAlign": "center",
          }
        }
        testID="pricingCardTitle"
      >
        
      </Text>
      <Text
        accessibilityRole="text"
        style={
          Object {
            "color": "#242424",
            "fontSize": 51.42857142857143,
            "fontWeight": "700",
            "marginBottom": 10,
            "marginTop": 10,
            "textAlign": "center",
          }
        }
      >
        
      </Text>
      <Text
        accessibilityRole="text"
        style={
          Object {
            "color": "#86939e",
            "fontWeight": "600",
            "marginBottom": 5,
            "marginTop": 5,
            "textAlign": "center",
          }
        }
      >
        1 User
      </Text>
      <Text
        accessibilityRole="text"
        style={
          Object {
            "color": "#86939e",
            "fontWeight": "600",
            "marginBottom": 5,
            "marginTop": 5,
            "textAlign": "center",
          }
        }
      >
        Basic Support
      </Text>
      <Text
        accessibilityRole="text"
        style={
          Object {
            "color": "#86939e",
            "fontWeight": "600",
            "marginBottom": 5,
            "marginTop": 5,
            "textAlign": "center",
          }
        }
      >
        All Core Features
      </Text>
      <View
        style={
          Array [
            Object {
              "borderRadius": 3,
              "overflow": "hidden",
            },
            undefined,
            false,
          ]
        }
        testID="RNE_BUTTON_WRAPPER"
      >
        <View
          accessibilityRole="button"
          accessibilityState={
            Object {
              "busy": false,
              "disabled": false,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="RNE__PricingButton"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#2089dc",
                "borderColor": "#2089dc",
                "borderRadius": 3,
                "borderWidth": 0,
                "flexDirection": "row",
                "justifyContent": "center",
                "marginBottom": 10,
                "marginTop": 15,
                "padding": 8,
              }
            }
          >
            <View
              style={
                Object {
                  "overflow": "hidden",
                }
              }
              testID="RNE__ICON__CONTAINER"
            >
              <View
                accessibilityRole="button"
                android_ripple={
                  Object {
                    "borderless": false,
                    "color": "rgba(0, 0, 0, 0.3)",
                    "radius": -5,
                  }
                }
                disabled={false}
                replaceTheme={[Function]}
                testID="RNE__ICON__CONTAINER_ACTION"
                updateTheme={[Function]}
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "transparent",
                      "justifyContent": "center",
                    }
                  }
                  testID="RNE__ICON"
                >
                  <Text
                    allowFontScaling={false}
                    style={
                      Array [
                        Object {
                          "color": "white",
                          "fontSize": 15,
                        },
                        Object {
                          "backgroundColor": "transparent",
                        },
                        Object {
                          "fontFamily": "Material Icons",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                    testID="RNE__ICON__Component"
                  >
                    
                  </Text>
                </View>
              </View>
            </View>
            <Text
              style={
                Object {
                  "color": "white",
                  "fontSize": 18,
                  "paddingVertical": 1,
                  "textAlign": "center",
                }
              }
            >
              GET STARTED
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`PricingCard component should render with props 1`] = `
<View
  testID="wrapper"
>
  <View
    replaceTheme={[Function]}
    style={
      Object {
        "backgroundColor": "peru",
        "borderColor": "#e1e8ee",
        "borderWidth": 1,
        "margin": 15,
        "marginBottom": 15,
        "padding": 15,
        "shadowColor": "rgba(0,0,0, .2)",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.5,
        "shadowRadius": 0.5,
      }
    }
    updateTheme={[Function]}
  >
    <View
      style={
        Object {
          "backgroundColor": "peru",
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          Object {
            "color": "#2089dc",
            "fontFamily": "arial",
            "fontSize": 38.57142857142857,
            "fontWeight": "800",
            "textAlign": "center",
          }
        }
        testID="pricingCardTitle"
      >
        Free
      </Text>
      <Text
        accessibilityRole="text"
        style={
          Object {
            "color": "#242424",
            "fontFamily": "arial",
            "fontSize": 51.42857142857143,
            "fontWeight": "700",
            "marginBottom": 10,
            "marginTop": 10,
            "textAlign": "center",
          }
        }
      >
        $0
      </Text>
      <Text
        accessibilityRole="text"
        style={
          Object {
            "color": "#86939e",
            "fontFamily": "arial",
            "fontWeight": "600",
            "marginBottom": 5,
            "marginTop": 5,
            "textAlign": "center",
          }
        }
      >
        1 User
      </Text>
      <Text
        accessibilityRole="text"
        style={
          Object {
            "color": "#86939e",
            "fontFamily": "arial",
            "fontWeight": "600",
            "marginBottom": 5,
            "marginTop": 5,
            "textAlign": "center",
          }
        }
      >
        Basic Support
      </Text>
      <Text
        accessibilityRole="text"
        style={
          Object {
            "color": "#86939e",
            "fontFamily": "arial",
            "fontWeight": "600",
            "marginBottom": 5,
            "marginTop": 5,
            "textAlign": "center",
          }
        }
      >
        All Core Features
      </Text>
      <View
        style={
          Array [
            Object {
              "borderRadius": 3,
              "overflow": "hidden",
            },
            undefined,
            false,
          ]
        }
        testID="RNE_BUTTON_WRAPPER"
      >
        <View
          accessibilityRole="button"
          accessibilityState={
            Object {
              "busy": false,
              "disabled": false,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="RNE__PricingButton"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#2089dc",
                "borderColor": "#2089dc",
                "borderRadius": 3,
                "borderWidth": 0,
                "flexDirection": "row",
                "justifyContent": "center",
                "marginBottom": 10,
                "marginTop": 15,
                "padding": 8,
              }
            }
          >
            <View
              style={
                Object {
                  "overflow": "hidden",
                }
              }
              testID="RNE__ICON__CONTAINER"
            >
              <View
                accessibilityRole="button"
                android_ripple={
                  Object {
                    "borderless": false,
                    "color": "rgba(0, 0, 0, 0.3)",
                    "radius": -5,
                  }
                }
                disabled={false}
                replaceTheme={[Function]}
                testID="RNE__ICON__CONTAINER_ACTION"
                updateTheme={[Function]}
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "transparent",
                      "justifyContent": "center",
                    }
                  }
                  testID="RNE__ICON"
                >
                  <Text
                    allowFontScaling={false}
                    style={
                      Array [
                        Object {
                          "color": "white",
                          "fontSize": 15,
                        },
                        Object {
                          "backgroundColor": "transparent",
                        },
                        Object {
                          "fontFamily": "Material Icons",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                    testID="RNE__ICON__Component"
                  >
                    
                  </Text>
                </View>
              </View>
            </View>
            <Text
              style={
                Object {
                  "color": "white",
                  "fontSize": 18,
                  "paddingVertical": 1,
                  "textAlign": "center",
                }
              }
            >
              GET STARTED
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
